assets/css/app.css
/* ... */
    .radio input[type=radio] + .radio-label:before {
      background: var(--off-white);
      border: 1px solid var(--gray-medium);
      border-radius: 100%;
      content: "";
      cursor: pointer;
      display: inline-block;
      height: 1em;
      margin-right: 0.5em;
      position: relative;
      text-align: center;
      transition: all 250ms ease;
      top: 0;
      vertical-align: top;
      width: 1em;
    }
    .radio input[type=radio]:checked + .radio-label:before {
      background-color: var(--base-color);
      box-shadow: inset 0 0 0 4px var(--off-white);
    }
    .radio input[type=radio]:focus + .radio-label:before {
      outline: none;
      border-color: var(--base-color);
    }
    .radio input[type=radio]:disabled + .radio-label:before {
      box-shadow: inset 0 0 0 4px var(--off-white);
      border-color: var(--gray-medium);
      background: var(--gray-medium);
    }
    .radio input[type=radio] + .radio-label:empty:before {
      margin-right: 0;
    }

  .switch {
    background-color: #444;
    border-radius: 999px;
    cursor: pointer;
    display: block;
    height: 20px;
    position: relative;
    vertical-align: middle;
    width: 32px;
  }
    .switch[data-status='true'] {
      background-color: var(--base-color);
    }
    .switch[data-status='true'] .knob {
      transform: translateX(calc(100% - 4px));
    }
    .switch .knob {
      background-color: var(--white);
      border-radius: 8px;
      display: block;
      height: calc(100% - 4px);
      left: 2px;
      position: absolute;
      top: 2px;
      transform: translateX(0);
      transition: transform 0.3s;
      width: 50%;
    }

.invalid {
  color: var(--black);
}
.valid {
  color: #364333a7;
}
.valid.first-guess {
  color: var(--base-color);
}
.help .invalid,
.help .valid {
  font-weight: 600;
}

/*
 * HEADER
 */
header {
  align-items: center;
  border-bottom: 1px solid var(--base-color);
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: space-evenly;
  height: 50px;
  padding: 0;
}
  header .menu-left {
    align-items: center;
    display: flex;
    justify-content: flex-start;
    margin: 0;
    padding: 0;
    width: 70px;
  }
    header .menu-left #nav-overlay {
      align-items: unset;
      background-color: transparent;
      display: none;
      height: 100%;
      justify-content: left;
      left: 0;
      position: absolute;
      top: 0;
      width: 100%;
      z-index: 10;
    }
      header .menu-left #nav-overlay.show {
        display: flex;
      }
        header .menu-left #nav-overlay #nav-content {
          background-color: var(--white);
          border-radius: 0;
          box-shadow: 3px 5px 5px rgb(0 0 0 / 15%);
          box-sizing: border-box;
          margin-top: 51px;
          max-height: calc(100% - 41px);
          max-width: 500px;
          overflow-y: auto;
          padding: 0px;
          position: relative;
          width: 100%;
        }
        @media (min-width: 415px) {
          header .menu-left #nav-overlay #nav-content {
            width: 325px;
          }
        }
          header .menu-left #nav-overlay #nav-content a {
            color: var(--black);
            text-decoration: none;
          }

          header .menu-left #nav-overlay #nav-content .container {
            align-items: normal;
            padding: 0;
          }
            header .menu-left #nav-overlay #nav-content .container .nav-header {
              font-size: 20px;
              padding-bottom: 18px;
              padding-left: 18px;
              padding-top: 18px;
            }
            header .menu-left #nav-overlay #nav-content .container .nav-list a {
              align-items: center;
              background-color: transparent;
              display: flex;
              font-size: 16px;
              font-weight: bold;
              height: 30px;
              justify-content: left;
              padding: 4px 0 4px 18px;
            }
            header .menu-left #nav-overlay #nav-content .container .nav-list a:hover {
              background-color: var(--light-color);
            }
          header .menu-left #nav-overlay #nav-content #button-nav-close {
            font-size: 20px;
            font-weight: 600;
            height: 24px;
            position: absolute;
            right: 10px;
            top: 16px;
            width: 24px;
          }
          header .menu-left #nav-overlay #nav-content .nav-footer {
            display: flex;
          }
          #footer-neb-host {
            background: var(--base-color);
            border-top: 2px solid var(--dark-color);
            bottom: 0;
            color: var(--black);
            font-family: 'Consolas', sans-serif;
            font-size: 12px;
            font-weight: 500;
            height: 18px;
            left: 0;
            letter-spacing: initial;
            margin-top: 20px;
            padding: 10px 18px;
            position: absolute;
            right: 0;
            text-align: left;
            z-index: 2
          }

  header #debug-buttons {
    display: none;
  }
  header #debug-buttons button {
    color: var(--debug-color);
  }
  header #debug-buttons .ddmenu {
    align-items: center;
    display: flex;
    z-index: 10;
  }
    header #debug-buttons .ddmenu .ddgroup {
      border: 1px solid transparent;
      position: relative;
      text-decoration: none;
      width: 100%;
    }
      header #debug-buttons .ddmenu .ddgroup button {
        margin-right: 0;
      }
      header #debug-buttons .ddmenu .ddgroup:hover {
        background: var(--debug-color-light3);
        border: 1px solid var(--debug-color-medium);
        cursor: pointer;
      }
        header #debug-buttons .ddmenu .ddgroup .ddsub {
          display: none;
          left: -1px;
          position: absolute;
          top: 100%;
          width: 100%;
        }
/* ... */

